--- a/TS02/web/requirements.txt
+++ b/TS02/web/requirements.txt
@@ -8,3 +8,6 @@ python-decouple==2.3
 pytz==2015.4
 scipy>=0.9
 scikit-learn>=0.18.0
+git+https://github.com/django-nonrel/django
+djangotoolbox
+git+https://github.com/django-nonrel/mongodb-engine
