--- a/medicos/web/requirements.txt
+++ b/medicos/web/requirements.txt
@@ -4,7 +4,10 @@ dj-database-url==0.3.0
 django-extensions==1.5.5
 requests==2.7.0
 pandas==0.19.1
+gunicorn==19.4.5
+whitenoise==2.0.6
 python-decouple==2.3
+dj-static==0.0.6
 pytz==2015.4
 scipy>=0.9
 scikit-learn>=0.18.0
