--- a/pacientes/server/package.json
+++ b/pacientes/server/package.json
@@ -17,6 +17,7 @@
     "cookie-parser": "^1.3.5",
     "ejs": "^2.3.3",
     "express-session": "^1.11.3",
+    "mongoose": "^4.2.6",
     "morgan": "^1.6.1",
     "passport": "^0.2.2",
     "passport-facebook": "^2.0.0"
