--- a/pacientes/server/package.json
+++ b/pacientes/server/package.json
@@ -1,7 +1,7 @@
 {
   "name": "server",
   "version": "1.0.0",
-  "description": "",
+  "description": "STAMPS-Academico",
   "main": "index.js",
   "author": "",
   "license": "ISC",
@@ -10,18 +10,19 @@
     "start": "node index.js"
   },
   "dependencies": {
-    "express": "^4.15.2",
-    "mongodb": "~2.2",
     "body-parser": "^1.13.2",
+    "browser-sync": "^2.18.12",
     "connect-ensure-login": "^0.1.1",
     "cookie-parser": "^1.3.5",
     "ejs": "^2.3.3",
+    "express": "^4.15.2",
     "express-session": "^1.11.3",
+    "kafka-node": "^1.6.2",
+    "mongodb": "~2.2",
     "mongoose": "^4.2.6",
     "morgan": "^1.6.1",
     "passport": "^0.2.2",
     "passport-facebook": "^2.0.0"
   },
-  "devDependencies": {
-  }
+  "devDependencies": {}
 }
