--- a/pacientes/server/bower.json
+++ b/pacientes/server/bower.json
@@ -6,6 +6,7 @@
   "homepage": "",
   "dependencies": {
     "jquery-ui": "^1.12.1",
-    "bootstrap": "^3.3.7"
+    "bootstrap": "^3.3.7",
+    "select2": "^4.0"
   }
 }
