--- a/pacientes/triagem/nodejs/Dockerfile
+++ b/pacientes/triagem/nodejs/Dockerfile
@@ -1,5 +1,10 @@
 FROM node:6
+
 MAINTAINER Luiz Coura <luizcoura@gmail.com>
+
+ENV ZOOKEEPER "34.204.88.242:2181"
+ENV TOPICIN "det-paciente"
+ENV TOPICOUT "tri-paciente"
 
 WORKDIR /app
 ADD . /app
