--- a/pacientes/timeline/Dockerfile
+++ b/pacientes/timeline/Dockerfile
@@ -2,6 +2,9 @@ FROM node:6
 
 MAINTAINER Luiz Coura <luizcoura@gmail.com>
 
+ENV PORT 9090
+ENV ZOOKEEPER "34.204.88.242:2181"
+
 ADD . /var/www/timeline
 WORKDIR /var/www/timeline
 
@@ -9,7 +12,7 @@ RUN npm install \
  && npm install -g bower \
  && bower install --allow-root
 
-EXPOSE 8080
+EXPOSE 9090
 
 CMD ["npm", "start"]
 
