--- a/pacientes/timeline/bower.json
+++ b/pacientes/timeline/bower.json
@@ -16,6 +16,7 @@
     "angular-timeline": "^1.7.0",
     "bootstrap": "^3.3.7",
     "ngtouch": "^1.0.2",
-    "angular-scroll-glue": "*"
+    "angular-scroll-glue": "*",
+    "ngmap": "^1.18.4"
   }
 }
