--- a/pacientes/timeline/package.json
+++ b/pacientes/timeline/package.json
@@ -10,9 +10,10 @@
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.3",
     "express": "~4.15.2",
+    "express-hbs": "^1.0.4",
     "hbs": "~4.0.1",
+    "kafka-node": "*",
     "morgan": "~1.8.1",
-    "serve-favicon": "~2.4.2",
-    "kafka-node": "*"
+    "serve-favicon": "~2.4.2"
   }
 }
