--- a/pacientes/timeline/package.json
+++ b/pacientes/timeline/package.json
@@ -11,6 +11,7 @@
     "debug": "~2.6.3",
     "express": "~4.15.2",
     "express-hbs": "^1.0.4",
+    "express-session": "^1.15.3",
     "hbs": "~4.0.1",
     "kafka-node": "*",
     "morgan": "~1.8.1",
